Upload new local files
Edit style

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
   <head>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>| Etch a BitSketch |</title>
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <title>| bitSketch |</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/png" href="./favicon-circle.png">
   </head>
@@ -127,6 +126,7 @@
         <img src="./img/camera.png" alt="camera-tool">
       </button>
       <footer>
+        <strong>bitSketch</strong>
         by <a href="https://github.com/casiimir">Casiimir</a>
       </footer>
     </div>
