--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </li>
       </ul>    
       <button class="btn btn-take-screen">
-        <img src="./img/camera.png" alt="camera-tool">
+        <img src="./img/save.svg" alt="camera-tool">
       </button>
       <footer>
         <strong>bitSketch</strong>
