--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="grids-list">
       <ul>
         <li class="item">
-          <button class="btn btn-select-grid shadow-none" name="32">32x32</button>
+          <button class="btn btn-select-grid item-first shadow-none" name="32">[ X8 ]</button>
         </li>
         <li class="item">
-          <button class="btn btn-select-grid shadow-none" name="16">16x16</button>
+          <button class="btn btn-select-grid shadow-none" name="16">[ X4 ]</button>
         </li>
         <li class="item">
-          <button class="btn btn-select-grid shadow-none" name="8">8x8</button>
+          <button class="btn btn-select-grid shadow-none" name="8">[ X2 ]</button>
         </li>
         <li class="item">
-          <button class="btn btn-select-grid shadow-none" name="4">4x4</button>
+          <button class="btn btn-select-grid item-four shadow-none" name="4">[ X1 ]</button>
         </li>
       </ul>
     </div>
